--- a/XBOX_DIEGO_21062022/index.html
+++ b/XBOX_DIEGO_21062022/index.html
@@ -39,7 +39,7 @@
     
    </div> 
    <div class="box-container  ">
-        <div class="box-row  text-center ">
+        <div id="imagem" class="box-row  text-center ">
                 <div class="box-col box-medium-12  box-small-12  ">
                     <h1 class="titulo"> BENEFÍCIOS ADICIONAIS <BR>
                     PARA MEMBROS
@@ -96,7 +96,7 @@
         </div>
         <div class="box-container alt ">
             <div class="box-row ">
-                    <div class="box-col box-medium-12  box-small-12  ">
+                    <div id="titulo-secundario" class="box-col box-medium-12  box-small-12  ">
                         <h1 class="titulo text-center"> COMO É QUE FUNCIONA </h1>
                         
                     </div>
@@ -180,7 +180,7 @@
 </div> 
 <div class="box-container  ">
     <div class="box-row   ">
-        <div class="box-col box-medium-12  box-small-12  text-center-img">
+        <div id="para-footer" class="box-col box-medium-12  box-small-12  text-center-img">
         <p>
             <h4>*Informações importantes:</h4> 
 			<p>Resgate em microsoft.com/redeem</p>
